<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:background="@drawable/item_view_background"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:layout_margin="3dp">

    <EditText
        android:id="@+id/list_item_edit_view_edTxtItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_edit_view_imgBtnMinus"
        app:layout_constraintEnd_toStartOf="@+id/list_item_edit_view_edTxtItemQty"
        android:text="@string/item_name"/>

    <EditText
        android:id="@+id/list_item_edit_view_edTxtItemQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/list_item_edit_view_edTxtItemName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_edit_view_imgBtnMinus"
        app:layout_constraintEnd_toStartOf="@+id/list_item_edit_view_txtItemUnit"
        android:text="@string/quantity"/>

    <TextView
        android:id="@+id/list_item_edit_view_txtItemUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/list_item_edit_view_edTxtItemQty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_edit_view_imgBtnMinus"
        app:layout_constraintEnd_toStartOf="@+id/list_item_edit_view_imgBtnMinus"
        android:text="@string/unit"/>

    <ImageButton
        android:id="@+id/list_item_edit_view_imgBtnMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove"
        android:src="@drawable/baseline_minus_nobg_rule_24"
        android:background="@color/mindaro_yellow"
        app:layout_constraintStart_toEndOf="@+id/list_item_edit_view_txtItemUnit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>