<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExpandedViewActivity"
    android:background="@color/sail_blue">

    <ImageButton
        android:id="@+id/expanded_view_close"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_chevron_left_24"
        android:background="@color/sail_blue"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/expanded_view_linear1"/>

    <TextView
        android:id="@+id/expanded_view_txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/list"
        android:textSize="30sp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/expanded_view_linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_view_txtTitle">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/date_prompt" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/location_prompt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expanded_view_linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_view_linear1">

        <TextView
            android:id="@+id/expanded_view_txtDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/date_format" />

        <TextView
            android:id="@+id/expanded_view_txtLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/location" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/expanded_view_recyclerList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/expanded_view_linear2"
        app:layout_constraintBottom_toTopOf="@+id/expanded_view_linear4"/>

    <LinearLayout
        android:id="@+id/expanded_view_linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/expanded_view_recyclerList"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/spray_blue">

        <EditText
            android:id="@+id/expanded_view_edtxtNewItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/expanded_view_edtxtQty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:hint="@string/qty"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/expanded_view_spinnerUnits"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4" />

        <ImageButton
            android:id="@+id/expanded_view_btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.8"
            android:src="@drawable/baseline_add_24"
            android:background="@color/spray_blue"
            android:scaleType="fitCenter"/>
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:id="@+id/expanded_view_linear5"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:orientation="horizontal"-->
<!--        android:weightSum="3.2"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/expanded_view_linear4"-->
<!--        app:layout_constraintBottom_toBottomOf="parent">-->

<!--        <Button-->
<!--            android:id="@+id/expanded_view_btnEdit"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1.5"-->
<!--            android:text="Edit" />-->

<!--        <View-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="0.1" />-->

<!--        <Button-->
<!--            android:id="@+id/expanded_view_btnConfrim"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1.5"-->
<!--            android:text="Confirm" />-->

<!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>