<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ListItemsViewFragment">

        <LinearLayout
            android:id="@+id/list_item_view_fragment_linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/date_prompt" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/location_prompt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_item_view_fragment_linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintTop_toBottomOf="@+id/list_item_view_fragment_linear1">

            <TextView
                android:id="@+id/list_item_view_fragment_txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/date_format" />

            <TextView
                android:id="@+id/list_item_view_fragment_txtLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/location" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_view_fragment_recyclerList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/list_item_view_fragment_linear4"
            app:layout_constraintTop_toBottomOf="@id/list_item_view_fragment_linear2" />

        <LinearLayout
            android:id="@+id/list_item_view_fragment_linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/spray_blue"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_item_view_fragment_recyclerList">

            <EditText
                android:id="@+id/list_item_view_fragment_edtxtNewItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.1"
                android:hint="@string/item_name" />

            <EditText
                android:id="@+id/list_item_view_fragment_edtxtQty"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:hint="@string/qty"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/list_item_view_fragment_spinnerUnits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4" />

            <ImageButton
                android:id="@+id/list_item_view_fragment_btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:background="@color/spray_blue"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_add_24" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>